--- a/NewsApp/Base.lproj/Main.storyboard
+++ b/NewsApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3am-ih-QRk">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="twe-p6-F4W">
             <objects>
-                <viewController storyboardIdentifier="toDetailsVC" id="eda-5d-vE7" customClass="ViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="toDetailsVC" id="eda-5d-vE7" customClass="DetailsViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" restorationIdentifier="detail" id="qAy-ya-knP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -50,6 +50,9 @@
                                                 <buttonConfiguration key="configuration" style="plain" title="Haber içeriğine gitmek için tıklayınız..">
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="19"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="linkButtonClicked:" destination="eda-5d-vE7" eventType="touchUpInside" id="eEp-fk-IKN"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="30" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3L4-iP-FXb">
                                                 <rect key="frame" x="8" y="340" width="398" height="21.5"/>
@@ -100,15 +103,22 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KmZ-LR-3nn"/>
+                    <connections>
+                        <outlet property="detailsTitleLabel" destination="epA-M2-j8F" id="4sj-Qb-E4y"/>
+                        <outlet property="imageView" destination="YwX-Yj-Lko" id="ip0-GU-gcC"/>
+                        <outlet property="loadingButton" destination="IK0-2W-m6W" id="wiU-Xm-b9E"/>
+                        <outlet property="playButton" destination="o8c-Au-rzY" id="8Xz-3T-66u"/>
+                        <outlet property="spot" destination="3L4-iP-FXb" id="pSw-mL-Fhg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zdC-zj-pDt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7096" y="-2192"/>
+            <point key="canvasLocation" x="6768" y="-2192"/>
         </scene>
-        <!--View Controller-->
+        <!--Title View Controller-->
         <scene sceneID="OG5-pN-b1v">
             <objects>
-                <viewController id="2Du-ml-vWS" sceneMemberID="viewController">
+                <viewController id="2Du-ml-vWS" customClass="TitleViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="69U-X3-m5W">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -129,17 +139,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="cfD-KO-C4z"/>
                     <connections>
-                        <outlet property="headlineTableView" destination="sqz-qB-63b" id="HdP-Kd-XPQ"/>
+                        <outlet property="headlineTableView" destination="sqz-qB-63b" id="Ts6-W5-ido"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZY-Nl-epR" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4445" y="-8"/>
         </scene>
-        <!--View Controller-->
+        <!--Sport View Controller-->
         <scene sceneID="ccr-vI-6td">
             <objects>
-                <viewController id="FxT-xC-7ZK" sceneMemberID="viewController">
+                <viewController id="FxT-xC-7ZK" customClass="SportViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ivF-6L-jLP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -160,17 +170,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="9M0-pe-I49"/>
                     <connections>
-                        <outlet property="headlineTableView" destination="9G7-dU-r8r" id="H7y-Zm-VZe"/>
+                        <outlet property="sportTableView" destination="9G7-dU-r8r" id="mPo-VJ-cyE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tWi-xO-FOA" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5300" y="11"/>
         </scene>
-        <!--View Controller-->
+        <!--Policy View Controller-->
         <scene sceneID="VuO-nB-gV4">
             <objects>
-                <viewController id="C7i-19-KDX" sceneMemberID="viewController">
+                <viewController id="C7i-19-KDX" customClass="PolicyViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dxD-bC-Yhb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -191,17 +201,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="aBM-bJ-0R2"/>
                     <connections>
-                        <outlet property="headlineTableView" destination="d3a-Is-uu6" id="K68-QZ-biK"/>
+                        <outlet property="policyTableView" destination="d3a-Is-uu6" id="bVc-iS-yk2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ni0-1u-aQ9" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="7648" y="11"/>
         </scene>
-        <!--View Controller-->
+        <!--Economy View Controller-->
         <scene sceneID="jzX-t3-gRo">
             <objects>
-                <viewController id="9Fd-6C-qPx" sceneMemberID="viewController">
+                <viewController id="9Fd-6C-qPx" customClass="EconomyViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qoo-Ln-MTZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -222,17 +232,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="QA8-uH-xZy"/>
                     <connections>
-                        <outlet property="headlineTableView" destination="0rE-QM-TuR" id="OGF-0U-wyW"/>
+                        <outlet property="economyTableView" destination="0rE-QM-TuR" id="hGW-bw-M1a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DgU-SZ-nCr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6854" y="11"/>
         </scene>
-        <!--View Controller-->
+        <!--Magazine View Controller-->
         <scene sceneID="MMG-Hl-G9S">
             <objects>
-                <viewController id="9Sj-Xt-I2e" sceneMemberID="viewController">
+                <viewController id="9Sj-Xt-I2e" customClass="MagazineViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NVD-9v-HVC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -252,6 +262,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="SiZ-tj-XfP"/>
+                    <connections>
+                        <outlet property="magazineTableView" destination="sIa-P4-8Zr" id="Ghv-zX-87l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qjv-iY-UAb" sceneMemberID="firstResponder"/>
             </objects>
@@ -278,7 +291,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5fW-jX-Zvx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5903" y="-2192"/>
+            <point key="canvasLocation" x="6010" y="-2192"/>
         </scene>
         <!--Magazine-->
         <scene sceneID="Ubh-Tp-1cV">
