--- a/NewsApp/Cells/TitleTableViewCell.xib
+++ b/NewsApp/Cells/TitleTableViewCell.xib
@@ -1,21 +1,53 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TitleTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="141" id="kl4-m1-Rv7" customClass="TitleTableViewCell" customModule="NewsApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="280"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kl4-m1-Rv7" id="ZEM-1W-9ww">
+                <rect key="frame" x="0.0" y="0.0" width="400" height="280"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Unknown" translatesAutoresizingMaskIntoConstraints="NO" id="R6v-Ic-C32">
+                        <rect key="frame" x="10" y="13" width="381" height="225"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="R6v-Ic-C32" secondAttribute="height" multiplier="127:62" constant="-79.887096774193537" id="7ZL-7o-OV6"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSt-hX-XaX">
+                        <rect key="frame" x="10" y="251" width="381" height="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="NSt-hX-XaX" firstAttribute="leading" secondItem="ZEM-1W-9ww" secondAttribute="leading" constant="10" id="NN2-Q0-KHb"/>
+                    <constraint firstItem="NSt-hX-XaX" firstAttribute="top" secondItem="R6v-Ic-C32" secondAttribute="bottom" constant="13" id="PjU-jt-ud2"/>
+                    <constraint firstItem="R6v-Ic-C32" firstAttribute="top" secondItem="ZEM-1W-9ww" secondAttribute="top" constant="13" id="jQK-gt-cFK"/>
+                    <constraint firstAttribute="bottom" secondItem="NSt-hX-XaX" secondAttribute="bottom" constant="11" id="lLi-o5-pnJ"/>
+                    <constraint firstItem="R6v-Ic-C32" firstAttribute="leading" secondItem="ZEM-1W-9ww" secondAttribute="leading" constant="10" id="oVc-WZ-5io"/>
+                    <constraint firstAttribute="trailing" secondItem="R6v-Ic-C32" secondAttribute="trailing" constant="9" id="puv-VP-1aJ"/>
+                    <constraint firstAttribute="trailing" secondItem="NSt-hX-XaX" secondAttribute="trailing" constant="9" id="wJA-IJ-4hy"/>
+                </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="J9h-0R-6Xc"/>
+            <connections>
+                <outlet property="titleImageView" destination="R6v-Ic-C32" id="8E4-sk-1Uj"/>
+                <outlet property="titleLabel" destination="NSt-hX-XaX" id="YPX-fb-cJh"/>
+            </connections>
+            <point key="canvasLocation" x="19" y="99"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Unknown" width="180" height="180"/>
+    </resources>
 </document>
